--- a/editor.properties
+++ b/editor.properties
@@ -117,8 +117,8 @@ timestamp=007
 ############# BASE CONTROL #############
 # baselocation must the an working Eclipse installation with the delta pack
 
-base=/home/builder
-baseLocation=${base}/eclipse
+#base=/home/builder
+baseLocation=/home/builder/eclipse
 #Os/Ws/Arch/nl of the eclipse specified by baseLocation
 #baseos=macosx
 #basews=macosx
