--- a/server.properties
+++ b/server.properties
@@ -31,7 +31,8 @@ collectingFolder=${archivePrefix}
 # 		  macosx, cocoa, x86_64 & \
 # 		  linux, gtk, x86
 
-configs = macosx, cocoa, x86_64
+configs = macosx, cocoa, x86_64 & \
+          linux, gtk, x86
 
 	#win32, win32, x86
 #   linux, gtk, ppc &\
