Component type update order. #149

--- a/src/test/test.project
+++ b/src/test/test.project
@@ -10,3 +10,5 @@ gamepads = default.gamepadsc
 game_binding = default.input_bindingc
 [resource]
 uri = build/default/src/test
+[gameobject]
+update_order = spawnpointc,wavc,guic,emitterc,collisionobjectc,camerac,scriptc,modelc,lightc
