--- a/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr.editor/plugin.xml
@@ -52,12 +52,17 @@
    <extension
          point="org.eclipse.ui.views">
       <view
+            category="com.dynamo.cr.editorcategory"
             class="com.dynamo.cr.editor.status.ChangedFilesView"
             icon="icons/repository_rep.gif"
             id="com.dynamo.crepo.changedfiles"
             name="Changed Files"
             restorable="true">
       </view>
+      <category
+            id="com.dynamo.cr.editorcategory"
+            name="Dynamo Editor">
+      </category>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
