--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -7,4 +7,5 @@ bin.includes = META-INF/,\
                ext/jsr311-api-1.1.1.jar,\
                ext/jersey-core-1.3.jar,\
                ext/httpcore-4.0.1.jar,\
-               ext/httpclient-4.0.1.jar
+               ext/httpclient-4.0.1.jar,\
+               DYNAMO_HOME/share/java/ddf.jar
