--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -8,4 +8,7 @@ bin.includes = META-INF/,\
                ext/jersey-core-1.3.jar,\
                ext/httpcore-4.0.1.jar,\
                ext/httpclient-4.0.1.jar,\
-               DYNAMO_HOME/share/java/ddf.jar
+               DYNAMO_HOME/share/java/ddf.jar,\
+               DYNAMO_HOME/share/java/render.jar,\
+               DYNAMO_HOME/share/java/gameobject.jar,\
+               DYNAMO_HOME/share/java/gamesys.jar
