Render script prototype.

--- a/src/test/renderscript/test_renderscript.project
+++ b/src/test/renderscript/test_renderscript.project
@@ -8,7 +8,7 @@ debug_fp = debug.arbfp
 debug_vp = debug.arbvp
 gamepads = default.gamepadsc
 game_binding = default.input_bindingc
-render_script = test.render_scriptc
+render = test.renderc
 [resource]
 uri = build/default/src/test/renderscript
 [display]
