--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -75,6 +75,7 @@
         <module>../com.dynamo.cr.editor</module>
         <module>../com.dynamo.cr.contenteditor</module>
         <module>../com.dynamo.cr.luaeditor</module>
+        <module>../com.dynamo.cr.ddfeditor</module>
         <module>../com.dynamo.cr.protobind</module>
         <module>../com.dynamo.cr.protobind.test</module>
     </modules>
