Added render_script as an extension for the lua editor.

--- a/com.dynamo.cr.luaeditor/plugin.xml
+++ b/com.dynamo.cr.luaeditor/plugin.xml
@@ -6,7 +6,7 @@
          point="org.eclipse.ui.editors">
       <editor
             name="Lua Editor"
-            extensions="lua,script,gui_script"
+            extensions="lua,script,gui_script,render_script"
             icon="icons/lua.gif"
             contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
             class="com.dynamo.cr.luaeditor.LuaEditor"
