--- a/com.dynamo.cr.ddfeditor/plugin.xml
+++ b/com.dynamo.cr.ddfeditor/plugin.xml
@@ -59,6 +59,14 @@
             id="com.dynamo.cr.ddfeditor.guieditor"
             name="Gui Editor">
       </editor>
+      <editor
+            class="com.dynamo.cr.ddfeditor.FontEditor"
+            default="false"
+            extensions="font"
+            icon="icons/font.png"
+            id="com.dynamo.cr.ddfeditor.fonteditor"
+            name="Font Editor">
+      </editor>
    </extension>
 
 </plugin>
