Added input.jar to com.dynamo.cr.common

--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -11,4 +11,5 @@ bin.includes = META-INF/,\
                DYNAMO_HOME/share/java/ddf.jar,\
                DYNAMO_HOME/share/java/render.jar,\
                DYNAMO_HOME/share/java/gameobject.jar,\
-               DYNAMO_HOME/share/java/gamesys.jar
+               DYNAMO_HOME/share/java/gamesys.jar,\
+               DYNAMO_HOME/share/java/input.jar
