Added input binding editor

--- a/com.dynamo.cr.ddfeditor/plugin.xml
+++ b/com.dynamo.cr.ddfeditor/plugin.xml
@@ -83,6 +83,14 @@
             id="com.dynamo.cr.ddfeditor.rendereditor"
             name="Render Editor">
       </editor>
+      <editor
+            class="com.dynamo.cr.ddfeditor.InputBindingEditor"
+            default="false"
+            extensions="input_binding"
+            icon="icons/keyboard.png"
+            id="com.dynamo.cr.ddfeditor.inputeditor"
+            name="Input Binding Editor">
+      </editor>
    </extension>
 
 </plugin>
