--- a/com.dynamo.cr.ddfeditor/plugin.xml
+++ b/com.dynamo.cr.ddfeditor/plugin.xml
@@ -92,5 +92,89 @@
             name="Input Binding Editor">
       </editor>
    </extension>
+   <extension
+         point="org.eclipse.ui.newWizards">
+      <category
+            id="com.dynamo.cr.ddfeditor"
+            name="Content Wizards">
+      </category>
+      <wizard
+            category="com.dynamo.cr.ddfeditor"
+            class="com.dynamo.cr.ddfeditor.wizards.ModelNewWizard"
+            icon="icons/16-cube-green_16x16.png"
+            id="com.dynamo.cr.ddfeditor.wizards.ModelNewWizard"
+            name="Model file">
+      </wizard>
+      <wizard
+            category="com.dynamo.cr.ddfeditor"
+            class="com.dynamo.cr.ddfeditor.wizards.GameObjectNewWizard"
+            icon="icons/brick.png"
+            id="com.dynamo.cr.ddfeditor.wizards.GameObjectNewWizard"
+            name="Game object file">
+      </wizard>
+      <wizard
+            category="com.dynamo.cr.ddfeditor"
+            class="com.dynamo.cr.ddfeditor.wizards.CameraNewWizard"
+            icon="icons/camera.png"
+            id="com.dynamo.cr.ddfeditor.wizards.CameraNewWizard"
+            name="Camera file">
+      </wizard>
+      <wizard
+            category="com.dynamo.cr.ddfeditor"
+            class="com.dynamo.cr.ddfeditor.wizards.LightNewWizard"
+            icon="icons/lightbulb.png"
+            id="com.dynamo.cr.ddfeditor.wizards.LightNewWizard"
+            name="Light file">
+      </wizard>
+      <wizard
+            category="com.dynamo.cr.ddfeditor"
+            class="com.dynamo.cr.ddfeditor.wizards.SpawnPointNewWizard"
+            icon="icons/table_multiple.png"
+            id="com.dynamo.cr.ddfeditor.wizards.SpawnPointNewWizard"
+            name="Spawn point file">
+      </wizard>
+      <wizard
+            category="com.dynamo.cr.ddfeditor"
+            class="com.dynamo.cr.ddfeditor.wizards.CollisionObjectNewWizard"
+            icon="icons/weight.png"
+            id="com.dynamo.cr.ddfeditor.wizards.CollisionObjectNewWizard"
+            name="Collision object file">
+      </wizard>
+      <wizard
+            category="com.dynamo.cr.ddfeditor"
+            class="com.dynamo.cr.ddfeditor.wizards.GuiNewWizard"
+            icon="icons/text_allcaps.png"
+            id="com.dynamo.cr.ddfeditor.wizards.GuiNewWizard"
+            name="Gui file">
+      </wizard>
+      <wizard
+            category="com.dynamo.cr.ddfeditor"
+            class="com.dynamo.cr.ddfeditor.wizards.FontNewWizard"
+            icon="icons/font.png"
+            id="com.dynamo.cr.ddfeditor.wizards.FontNewWizard"
+            name="Font file">
+      </wizard>
+      <wizard
+            category="com.dynamo.cr.ddfeditor"
+            class="com.dynamo.cr.ddfeditor.wizards.MaterialNewWizard"
+            icon="icons/large_tiles.png"
+            id="com.dynamo.cr.ddfeditor.wizards.MaterialNewWizard"
+            name="Material file">
+      </wizard>
+      <wizard
+            category="com.dynamo.cr.ddfeditor"
+            class="com.dynamo.cr.ddfeditor.wizards.RenderNewWizard"
+            icon="icons/paintcan.png"
+            id="com.dynamo.cr.ddfeditor.wizards.RenderNewWizard"
+            name="Render file">
+      </wizard>
+      <wizard
+            category="com.dynamo.cr.ddfeditor"
+            class="com.dynamo.cr.ddfeditor.wizards.InputBindingNewWizard"
+            icon="icons/keyboard.png"
+            id="com.dynamo.cr.ddfeditor.wizards.InputBindingNewWizard"
+            name="Input binding file">
+      </wizard>
+   </extension>
 
 </plugin>
