Added com.dynamo.cr.ddfeditor.test to tycho build

--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -76,6 +76,7 @@
         <module>../com.dynamo.cr.contenteditor</module>
         <module>../com.dynamo.cr.luaeditor</module>
         <module>../com.dynamo.cr.ddfeditor</module>
+        <module>../com.dynamo.cr.ddfeditor.test</module>
         <module>../com.dynamo.cr.protobind</module>
         <module>../com.dynamo.cr.protobind.test</module>
     </modules>
