Game Object Prototype editor (#305)
* New Game Object Editor with support for adding/removing components and editing of properties of inline-resources
* Create ProtoFactory for template content and extension to descriptor mapping. First step towards a more general plug-in system for ddf-types. "Moved" dnewInitialWizardContent functionality to ProtoFactory
* Moved ProtoContentProvider to a public class. Used in both editors
* Added an Activator to ddfeditor-plugin for image resource loading
* Created a general proto-editor (ProtoTreeEditor)

--- a/com.dynamo.cr.ddfeditor/plugin.xml
+++ b/com.dynamo.cr.ddfeditor/plugin.xml
@@ -97,7 +97,7 @@
             extensions="gamepads"
             icon="icons/controller.png"
             id="com.dynamo.cr.ddfeditor.gamepadmapeditor"
-            name="Gamepad map Editor">
+            name="Gamepad Map Editor">
       </editor>
    </extension>
    <extension
