--- a/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr.common/build.properties
@@ -12,4 +12,5 @@ bin.includes = META-INF/,\
                DYNAMO_HOME/share/java/render.jar,\
                DYNAMO_HOME/share/java/gameobject.jar,\
                DYNAMO_HOME/share/java/gamesys.jar,\
-               DYNAMO_HOME/share/java/input.jar
+               DYNAMO_HOME/share/java/input.jar,\
+               DYNAMO_HOME/share/java/particle.jar
