Initial support for eclipse-link * Converted com.dynamo.server.test to a fragment project * Added eclipselink p2 repo for tycho build * Added derby database to com.dynamo.cr.server * Added initial entity classes, User and Project * Added initial unit-test

--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -14,6 +14,13 @@
             <url>http://download.eclipse.org/eclipse/updates/3.6</url>
             <!-- <url>http://download.eclipse.org/releases/helios</url> -->
         </repository>
+
+        <repository>
+            <id>eclipselink</id>
+            <layout>p2</layout>
+            <url>http://download.eclipse.org/rt/eclipselink/updates/</url>
+        </repository>
+
     </repositories>
 
     <properties>
