--- a/com.dynamo.cr.server/build.properties
+++ b/com.dynamo.cr.server/build.properties
@@ -12,4 +12,5 @@ bin.includes = META-INF/,\
                ext/jsr311-api-1.1.1.jar,\
                plugin.xml,\
                test_data/,\
-               scripts/
+               scripts/,\
+               ext/derby.jar
