Initial user-database support * Added PersistanceUnitName configuration to Application configuration (for JPA persistent unit specification) * Added password field and authentication method to User * Added postgresql driver * Added @RolesAllowed to root-resource (ProjectResource.java)

--- a/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -2,6 +2,7 @@ BranchRoot: "tmp/branch_root"
 Filters: ".*?\\.git"
 ServicePort: 6500
 BuildDataPort: 6001
+PersistenceUnitName: "unit-test"
 
 projects {
   Id: "proj1"
