--- a/com.dynamo.cr.server/build.properties
+++ b/com.dynamo.cr.server/build.properties
@@ -13,4 +13,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                test_data/,\
                scripts/,\
-               ext/derby.jar
+               ext/derby.jar,\
+               ext/postgresql-9.0-801.jdbc4.jar
