--- a/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr.server/config/chmu.config
@@ -2,6 +2,7 @@ BranchRoot: "/tmp/br"
 Filters: ".*?\\.git"
 ServicePort: 9998
 BuildDataPort: 6000
+PersistenceUnitName: "unit-test"
 
 projects {
   Id: "jetbot"
