Prepend user to every REST-resource in cr (#313) * Removed hard-coded project configuration. Projects are in the database * Add UserInfo and LaunchInfo protocol messages * Added new UsersResource and corresponding IUsersClient * Removed user argument from IProjectClient methods. Users is now always part of the URI * REST-URI for branch resources now starts with /branches in order to avoid potential conflicts * Updated editor. Added project-preferences field. Temporary solution until we can list projects in the connect dialog * Added temporary project bootstrapping in Server.java (create the demos project)

--- a/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -3,51 +3,20 @@ Filters: ".*?\\.git"
 ServicePort: 6500
 BuildDataPort: 6001
 PersistenceUnitName: "unit-test"
+RepositoryRoot: "tmp/test_data"
+ProgressRe: "\\[(\\d+)/(\\d+)\\]"
 
-projects {
-  Id: "proj1"
-  Name: "Project 1"
-  Root: "tmp/test_data/proj1"
-
-  ProgressRe: "\\[(\\d+)/(\\d+)\\]"
-
-  ConfigureCommand: {
-    Args: "waf"
-    Args: "configure"
-  }
-
-  BuildCommand: {
-    Args: "waf"
-  }
-
-  RebuildCommand: {
-    Args: "waf" Args: "clean" Args: "build"
-  }
-
-  ExeCommand: {}
-
+ConfigureCommand: {
+  Args: "waf"
+  Args: "configure"
 }
 
-projects {
-  Id: "proj2"
-  Name: "Project 2"
-  Root: "tmp/test_data/proj2"
-
-  ProgressRe: "\\[(\\d+)/(\\d+)\\]"
-
-  ConfigureCommand: {
-    Args: "waf"
-    Args: "configure"
-  }
-
-  BuildCommand: {
-    Args: "waf"
-  }
-
-  RebuildCommand: {
-    Args: "waf" Args: "clean" Args: "build"
-  }
-
-  ExeCommand: {}
-
+BuildCommand: {
+  Args: "waf"
 }
+
+RebuildCommand: {
+  Args: "waf" Args: "clean" Args: "build"
+}
+
+ExeCommand: {}
